fixed contenteditable edit event not working on mobile, and added warning alert type

--- a/public/style/base.css
+++ b/public/style/base.css
@@ -186,6 +186,11 @@ button:hover{
     fill: #ff6f00;
 }
 
+.warn{
+    color: yellow;
+    fill: yellow;
+}
+
 input{
     border: none;
     background-color: var(--el-bg-color);
